--- a/Server/index.html
+++ b/Server/index.html
@@ -5,67 +5,90 @@
     <title>Line Chart</title>
     <script src="scripts/Chart.bundle.js"></script>
     <script src="scripts/utils.js"></script>
-    <style>
-    canvas{
-        -moz-user-select: none;
-        -webkit-user-select: none;
-        -ms-user-select: none;
-    }
-    </style>
-</head>
+    <script language="javascript">
 
-<body>
-    <div style="width:75%;">
-        <canvas id="canvas"></canvas>
-    </div>
-    <br>
-    <br>
-    <button id="randomizeData">Randomize Data</button>
-    <button id="addDataset">Add Dataset</button>
-    <button id="removeDataset">Remove Dataset</button>
-    <button id="addData">Add Data</button>
-    <button id="removeData">Remove Data</button>
-    <script>
-        var MONTHS = ["January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"];
+    const COLOURS = ["#e6194b", "#3cb44b", "#ffe119", "#0082c8", "#f58231", "#911eb4", "#46f0f0", "#d2f53c", "#fabebe", "#e6beff"];
+
+    function loadData() {
+        var url = window.location.href;
+        var arr = url.split("/");
+        var ipStr = arr[0] + "//" + arr[2];
+        var xhttp = new XMLHttpRequest();
+
+        xhttp.onreadystatechange = function() {
+            if (this.readyState == 4 && this.status >= 200 && this.status < 300) {
+                parseReportData(JSON.parse(this.responseText));
+            }
+        };
+        xhttp.open("GET", ipStr + "/data", true);
+        xhttp.send();
+    }
+
+    function pad(n) {
+        return (n < 10) ? ("0" + n) : n;
+    }
+
+    function getColour(data, mac) {
+        for (var i = 0; i < data.devices.length; i++) {
+            if (data.devices[i].mac == mac) return COLOURS[data.devices[i].colourIndex];
+        } 
+        return -1;
+    }
+
+    function parseReportData(response) {
+        var dataSetArray = [];
+        var labelArray = [];
+        var colour = getColour(response, response.data[0].mac);
+        updateControls(response.devices);
+        dataSetArray.push({label: "Sensor 1", backGroundColor: colour, borderColor: colour, data: [], fill: false}); 
+        var currentIndex = 0;
+        var currentMac = response.data[0].mac;
+        for (var i = 0; i < response.data.length; i++) {
+           if (response.data[i].mac != currentMac) {
+              currentIndex++;
+              currentMac = response.data[i].mac;
+              colour = getColour(response, currentMac);
+              dataSetArray.push({label: "Sensor " + (currentIndex + 1), backGroundColor: colour, borderColor: colour, data: [], fill: false});
+           }
+
+           if (currentIndex == 0) {
+               var date = new Date();
+               date.setTime(Date.parse(response.data[i].timeStamp));
+
+               var min = date.getUTCMinutes();
+               var hour = date.getUTCHours();
+               labelArray.push(pad(hour) + ":" + pad(min));
+           } 
+           dataSetArray[currentIndex].data.push(response.data[i].temperature);
+        } 
+        updateChart("Today's Temperature", labelArray, dataSetArray);
+    }
+
+    function updateControls(deviceList) {
+        var size = 56;
+        var divisor = 5;
+        var list = "<table>";
+        for (var i = 0; i < deviceList.length; i++) {
+           list += "<tr><td>";
+           list += "<img src='images/thermometer.png' style = 'width:" + size + "px; height: " + size + "px; background: " + COLOURS[deviceList[i].colourIndex] + "; -moz-border-radius: " + (size / divisor) + "px; -webkit-border-radius: " + (size / divisor) + "px; border-radius: 70px;'>";
+           list += "</td><td>Blink!</td></tr>" 
+        }
+        list += "</table>";
+        document.getElementById("control").innerHTML = list;
+    }
+
+    function updateChart(titleText, labelArray, dataSetArray) {
         var config = {
             type: 'line',
             data: {
-                labels: ["January", "February", "March", "April", "May", "June", "July"],
-                datasets: [{
-                    label: "My First dataset",
-                    backgroundColor: window.chartColors.red,
-                    borderColor: window.chartColors.red,
-                    data: [
-                        randomScalingFactor(),
-                        randomScalingFactor(),
-                        randomScalingFactor(),
-                        randomScalingFactor(),
-                        randomScalingFactor(),
-                        randomScalingFactor(),
-                        randomScalingFactor()
-                    ],
-                    fill: false,
-                }, {
-                    label: "My Second dataset",
-                    fill: false,
-                    backgroundColor: window.chartColors.blue,
-                    borderColor: window.chartColors.blue,
-                    data: [
-                        randomScalingFactor(),
-                        randomScalingFactor(),
-                        randomScalingFactor(),
-                        randomScalingFactor(),
-                        randomScalingFactor(),
-                        randomScalingFactor(),
-                        randomScalingFactor()
-                    ],
-                }]
+                labels: labelArray,
+                datasets: dataSetArray
             },
             options: {
                 responsive: true,
                 title:{
                     display:true,
-                    text:'Chart.js Line Chart'
+                    text: titleText
                 },
                 tooltips: {
                     mode: 'index',
@@ -80,83 +103,47 @@
                         display: true,
                         scaleLabel: {
                             display: true,
-                            labelString: 'Month'
+                            labelString: 'Time'
                         }
                     }],
                     yAxes: [{
                         display: true,
                         scaleLabel: {
                             display: true,
-                            labelString: 'Value'
+                            labelString: 'Temperature ºc'
                         }
                     }]
                 }
             }
         };
 
+        var ctx = document.getElementById("canvas").getContext("2d");
+        window.myLine = new Chart(ctx, config);
+    }
+    </script>
+    <style>
+    canvas{
+        -moz-user-select: none;
+        -webkit-user-select: none;
+        -ms-user-select: none;
+    }
+    </style>
+</head>
+
+<body>
+    <div style="width:75%;float:left;">
+        <canvas id="canvas"></canvas>
+    </div>
+    <div style="width:25%;float:left;" id="control">
+       <ul> <li> One! </li>
+       <li> Two! </li></ul> 
+    </div>
+    <br>
+    <br>
+    <script>
         window.onload = function() {
-            var ctx = document.getElementById("canvas").getContext("2d");
-            window.myLine = new Chart(ctx, config);
+            loadData();
         };
-
-        document.getElementById('randomizeData').addEventListener('click', function() {
-            config.data.datasets.forEach(function(dataset) {
-                dataset.data = dataset.data.map(function() {
-                    return randomScalingFactor();
-                });
-
-            });
-
-            window.myLine.update();
-        });
-
-        var colorNames = Object.keys(window.chartColors);
-        document.getElementById('addDataset').addEventListener('click', function() {
-            var colorName = colorNames[config.data.datasets.length % colorNames.length];
-            var newColor = window.chartColors[colorName];
-            var newDataset = {
-                label: 'Dataset ' + config.data.datasets.length,
-                backgroundColor: newColor,
-                borderColor: newColor,
-                data: [],
-                fill: false
-            };
-
-            for (var index = 0; index < config.data.labels.length; ++index) {
-                newDataset.data.push(randomScalingFactor());
-            }
-
-            config.data.datasets.push(newDataset);
-            window.myLine.update();
-        });
-
-        document.getElementById('addData').addEventListener('click', function() {
-            if (config.data.datasets.length > 0) {
-                var month = MONTHS[config.data.labels.length % MONTHS.length];
-                config.data.labels.push(month);
-
-                config.data.datasets.forEach(function(dataset) {
-                    dataset.data.push(randomScalingFactor());
-                });
-
-                window.myLine.update();
-            }
-        });
-
-        document.getElementById('removeDataset').addEventListener('click', function() {
-            config.data.datasets.splice(0, 1);
-            window.myLine.update();
-        });
-
-        document.getElementById('removeData').addEventListener('click', function() {
-            config.data.labels.splice(-1, 1); // remove the label first
-
-            config.data.datasets.forEach(function(dataset, datasetIndex) {
-                dataset.data.pop();
-            });
-
-            window.myLine.update();
-        });
     </script>
 </body>
 
