--- a/Server/index.html
+++ b/Server/index.html
@@ -38,6 +38,7 @@
     function parseReportData(response) {
         var dataSetArray = [];
         var labelArray = [];
+        if (response == null || response.data == null || response.data.length == 0) return;
         var colour = getColour(response, response.data[0].mac);
         updateControls(response.devices);
         dataSetArray.push({label: "Sensor 1", backGroundColor: colour, borderColor: colour, data: [], fill: false}); 
@@ -62,19 +63,59 @@
            dataSetArray[currentIndex].data.push(response.data[i].temperature);
         } 
         updateChart("Today's Temperature", labelArray, dataSetArray);
+        setTimeout(function() { loadData(); }, 120000);
     }
 
     function updateControls(deviceList) {
         var size = 56;
-        var divisor = 5;
+        var divisor = 2;
         var list = "<table>";
         for (var i = 0; i < deviceList.length; i++) {
+           var device = deviceList[i];
            list += "<tr><td>";
-           list += "<img src='images/thermometer.png' style = 'width:" + size + "px; height: " + size + "px; background: " + COLOURS[deviceList[i].colourIndex] + "; -moz-border-radius: " + (size / divisor) + "px; -webkit-border-radius: " + (size / divisor) + "px; border-radius: 70px;'>";
-           list += "</td><td>Blink!</td></tr>" 
+           list += "<a onclick='blink(\""+device.ip + "\", \"" + device.mac + "\");'>";
+           list += "<img id=img_"+device.mac+" src='images/thermometer.png' style = 'width:" + size + "px; height: " + size + "px; background: " + COLOURS[deviceList[i].colourIndex] + "; -moz-border-radius: " + (size / divisor) + "px; -webkit-border-radius: " + (size / divisor) + "px; border-radius: 70px;'>";
+           list += "</a>";
+           list += "</td></td><td><p id=temp_"+deviceList[i].mac+">--</p></td></tr>" ;
+           setupForNode(device, i);
         }
         list += "</table>";
         document.getElementById("control").innerHTML = list;
+    }
+
+    function setupForNode(node, i) {
+        setTimeout(function() {
+            updateTemperatureNode(node);
+        }, i * 1000);
+    }
+
+    function updateTemperatureNode(node) {
+        var xhttpTemp = new XMLHttpRequest();
+
+        xhttpTemp.onreadystatechange = function() {
+            if (this.readyState == 4 && this.status >= 200 && this.status < 300) {
+                var data = JSON.parse(this.response);
+                document.getElementById("temp_"+node.mac).innerHTML = JSON.parse(this.responseText).temperature;
+            }
+        };
+        xhttpTemp.open("GET", "http://" + node.ip + "/temperature", true);
+        xhttpTemp.send();
+    }
+
+    var flip = true;
+    function blink(ip, mac) {
+        var xhttpBlink = new XMLHttpRequest();
+        xhttpBlink.open("GET", "http://" + ip + "/blink", true);
+        xhttpBlink.send();
+        var element = document.getElementById("img_"+mac);
+        var colour = element.style.background;
+        for (var i = 0; i < 34; i++) {
+            var time = i;
+            setTimeout(function() {
+                element.style.backgroundColor = (flip) ? "transparent" : colour;
+                flip = !flip;
+            }, time * 250);
+        }
     }
 
     function updateChart(titleText, labelArray, dataSetArray) {
@@ -135,8 +176,6 @@
         <canvas id="canvas"></canvas>
     </div>
     <div style="width:25%;float:left;" id="control">
-       <ul> <li> One! </li>
-       <li> Two! </li></ul> 
     </div>
     <br>
     <br>
