Fixed a label problem

--- a/Server/heatmap.html
+++ b/Server/heatmap.html
@@ -189,6 +189,7 @@ menu = get('menu');
 menu.style.visibility = 'hidden';
 draw();
 get('canvas').addEventListener("click", onClick, false);
+get('labels').addEventListener("click", onClick, false);
 loadData();
 
 window.addEventListener('keydown', function(e){
